Hooking up initial logic and UI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "state/*": ["state/*"],
       "types/*": ["types/*"],
-    }
+    },
+    "resolveJsonModule": true
   },
   "include": [
     "src/*"
