--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React with TypeScript starterpack.",
   "main": "index.tsx",
   "scripts": {
-    "start": "webpack-dev-server --open --config config/webpack.dev.js",
+    "dev": "webpack-dev-server --open --config config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js"
   },
   "keywords": [
